adding support for enums